--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="col-md-4">
                 <h2>Virtual Reality</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p>Here at OU, we're exploring new methods of research and instruction through the use of technology. Here's some of the work we've been doing using VR across multiple disciplines.</p>
                 <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-4" id="webdev">
