--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -20,7 +20,7 @@
                     </span> <span class="icon-bar">
                     </span> 
                 </button>
-                <a class="navbar-brand" href="index.html" target="_self"><font color="#FFFFFF">Home</font></a>
+                <a class="navbar-brand" href="index.html">Home</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -33,7 +33,7 @@
                         </ul>
                     </li>
                     <li><a href="CV.html">CV</a></li>
-                    <li><a href="guides.ou.edu">Research Guides</a></li>
+                    <li><a href="http://guides.ou.edu">Research Guides</a></li>
                 </ul>
             </div>
         </div>
