--- a/index.html
+++ b/index.html
@@ -48,18 +48,22 @@
         <div class="row">
             <div class="col-md-4">
                 <h2>Virtual Reality</h2>
-                <p>Here at OU, we're exploring new methods of research and instruction through the use of technology. Here's some of the work we've been doing using VR across multiple disciplines.</p>
+                <p>Here at OU, we're exploring new methods of research and instruction through the use of Virtual Reality. Here's some of the work we've been doing using VR across multiple disciplines.</p>
                 <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-4" id="webdev">
-                <h2>Web Dev</h2>
+                <h2>Digital Scholarship</h2>
                 <img class="smallpic" src="images/cytoscape.png">
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p>Hey, kid! I'm a computer!</p>
                 <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-4">
                 <h2>Other Projects</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <ul>
+                	<li>GW</li>
+                	<li>ALA</li>
+                	<li>INALJ</li>
+                </ul>
                 <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
         </div>
