--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                     <li><a href="about.html">About</a></li>
                     <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="ITA.html">Inhabiting The Anthropocene</a></li>
-                            <li><a href="ImmersiveEd.html">Immersive Education</a></li>
-                            <li><a href="EmergingTech.html">Emerging Technologies</a></li>
+                            <li><a href="ita.html">Inhabiting The Anthropocene</a></li>
+                            <li><a href="vr.html">Immersive Education</a></li>
+                            <li><a href="tech.html">Emerging Technologies</a></li>
                         </ul>
                     </li>
                     <li><a href="CV.html">CV</a></li>
@@ -49,13 +49,13 @@
             <div class="col-md-4">
                 <h2>Virtual Reality</h2>
                 <p>Here at OU, we're exploring new methods of research and instruction through the use of Virtual Reality. Here's some of the work we've been doing using VR across multiple disciplines.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="vr.html" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-4" id="webdev">
                 <h2>Digital Scholarship</h2>
                 <img class="smallpic" src="images/cytoscape.png">
                 <p>Hey, kid! I'm a computer!</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="scholarship.html" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-4">
                 <h2>Other Projects</h2>
@@ -64,7 +64,7 @@
                 	<li>ALA</li>
                 	<li>INALJ</li>
                 </ul>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="projects.html" role="button">View details &raquo;</a></p>
             </div>
         </div>
     </div>
