images and styling

--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
             </div>
             <div class="col-md-4" id="webdev">
                 <h2>Digital Scholarship</h2>
-                <img class="smallpic" src="images/cytoscape.png">
+                <img class="img-thumbnail" src="images/cytoscape.png">
                 <p>Hey, kid! I'm a computer!</p>
                 <p><a class="btn btn-default" href="scholarship.html" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-4">
                 <h2>Other Projects</h2>
+                <img class="img-thumbnail" id="galileo" src="images/galileo.png">
                 <ul>
                 	<li>GW</li>
                 	<li>ALA</li>
