--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>James L. Adams</title>
+  	<link rel="stylesheet" href="lightbox2-master/dist/css/lightbox.css">
     <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="style.css">
@@ -32,8 +33,9 @@
                             <li><a href="tech.html">Emerging Technologies</a></li>
                         </ul>
                     </li>
-                    <li><a href="CV.html">CV</a></li>
+                    <li><a href="cv.html">CV</a></li>
                     <li><a href="http://guides.ou.edu">Research Guides</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -53,13 +55,13 @@
             </div>
             <div class="col-md-4" id="webdev">
                 <h2>Digital Scholarship</h2>
-                <img class="img-thumbnail" src="images/cytoscape.png">
+                <a href="images/cytoscape.png" data-lightbox="cytoscape"><img class="img-thumbnail" src="images/cytoscape.png"></a>
                 <p>Hey, kid! I'm a computer!</p>
                 <p><a class="btn btn-default" href="scholarship.html" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-4">
                 <h2>Other Projects</h2>
-                <img class="img-thumbnail" id="galileo" src="images/galileo.png">
+                <a href="images/galileo.png" data-lightbox="galileo.png"><img class="img-thumbnail" id="galileo" src="images/galileo.png"></a>
                 <ul>
                 	<li>GW</li>
                 	<li>ALA</li>
@@ -69,11 +71,7 @@
             </div>
         </div>
     </div>
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2015</p>
-        </div>
-    </footer>
     <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+  	<script src="lightbox2-master/dist/js/lightbox.min.js"></script>
 </body>
 </html>
