added about page

--- a/about.html
+++ b/about.html
@@ -48,27 +48,16 @@
     </div>
     <div class="container" id="content">
         <div class="row">
-            <div class="col-md-4">
-                <h2>Virtual Reality</h2>
-                <a href="images/vr.png" data-lightbox="vr"><img class="img-thumbnail" src="images/vr.png"></a>
-                <p>Here at OU, we're exploring new methods of research and instruction through the use of Virtual Reality. Here's some of the work we've been doing using VR across multiple disciplines.</p>
-                <p><a class="btn btn-default" href="vr.html" role="button">View details &raquo;</a></p>
-            </div>
-            <div class="col-md-4" id="webdev">
-                <h2>Digital Scholarship</h2>
-                <a href="images/cytoscape.png" data-lightbox="cytoscape"><img class="img-thumbnail" src="images/cytoscape.png"></a>
-                <p>Hey, kid! I'm a computer!</p>
-                <p><a class="btn btn-default" href="scholarship.html" role="button">View details &raquo;</a></p>
-            </div>
-            <div class="col-md-4">
-                <h2>Other Projects</h2>
-                <a href="images/galileo.png" data-lightbox="galileo.png"><img class="img-thumbnail" id="galileo" src="images/galileo.png"></a>
-                <ul>
-                	<li>GW</li>
-                	<li>ALA</li>
-                	<li>INALJ</li>
-                </ul>
-                <p><a class="btn btn-default" href="projects.html" role="button">View details &raquo;</a></p>
+            <div class="col-md-10 col-centered">
+                <h2 align="center">About</h2>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p>Here at OU, we're exploring new methods of research and instruction through the use of Virtual Reality. Here's some of the work we've been doing using VR across multiple disciplines.</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <a href="images/james.jpg" data-lightbox="james"><img class="img-thumbnail" src="images/james.jpg"></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
