--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <h2 align="center">About</h2>
                 <div class="row">
                     <div class="col-sm-6">
-                        <p>Here at OU, we're exploring new methods of research and instruction through the use of Virtual Reality. Here's some of the work we've been doing using VR across multiple disciplines.</p>
+                        <p>I’ve worked as Emerging Technologies Librarian at the University of Oklahoma Libraries since October 2014, where my role includes the exploration of new software and hardware for use by researchers and instructors. I earned my Master's Degree in Library and Information Science at the Pratt Institute in 2013 and hold a Bachelor's Degree in Music and English from Boston College (earned 2010). In addition to my professional interests - ranging from VR and data visualization to paper making in the 1400’s - I also enjoy well-made beer and telling everybody that New England is the best place in the world.</p>
                     </div>
                     <div class="col-sm-6">
                         <a href="images/james.jpg" data-lightbox="james"><img class="img-thumbnail" src="images/james.jpg"></a>
