--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                     <a href="mailto:jladams@ou.edu">jladams@ou.edu</a>
                 </div>
                 <div class="col-md-5">
-                    <a href="images/house.png" data-lightbox="house"><img class="img-thumbnail" src="images/house.png"></a>
+                    <a href="images/house.png" data-lightbox="house" data-title="House"><img class="img-thumbnail" src="images/house.png"></a>
                 </div>
             </div>
         </div>
