--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                     <li><a href="about.html">About</a></li>
                     <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="ita.html">Inhabiting The Anthropocene</a></li>
+                            <li><a href="http://ztclasses.com/HabitationAnthropocene/index.html">Inhabiting The Anthropocene</a></li>
                             <li><a href="vr.html">Immersive Education</a></li>
                             <li><a href="tech.html">Emerging Technologies</a></li>
                         </ul>
@@ -40,12 +40,14 @@
             </div>
         </div>
     </nav>
+    <a href="index.html">
     <div class="jumbotron">
         <div class="container">
             <h1 align="center">James L. Adams</h1>
             <p align="center">Emerging Technologies Librarian at the University of Oklahoma Libraries. Here's some stuff I do.</p>
         </div>
     </div>
+    </a>
     <div class="container" id="content">
         <div class="row">
             <div class="col-md-11 col-centered">
