--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="//api3.libcal.com/js/myscheduler.js?002"></script>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -68,6 +69,9 @@
                 <div class="col-md-3 col-sm-6" style="margin-bottom:15px">
                     <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></br>
                     <a href="mailto:jladams@ou.edu">jladams@ou.edu</a>
+                    </br>
+                    </br>
+                    <button id="mySched8224" href="#">Schedule Appointment</a>
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <a href="images/house.png" data-lightbox="house" data-title="House"><img class="img-thumbnail" src="images/house.png"></a>
