--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>James L. Adams</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/party.png" />
   	<link rel="stylesheet" href="lightbox2-master/dist/css/lightbox.css">
     <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap-theme.min.css">
