--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                     <a href="mailto:jladams@ou.edu">jladams@ou.edu</a>
                     </br>
                     </br>
-                    <button id="mySched8224" href="#">Schedule Appointment</a>
+                    <button id="mySched8224" href="#">Schedule Appointment</a></button>
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <a href="images/house.png" data-lightbox="house" data-title="House"><img class="img-thumbnail" src="images/house.png"></a>
