--- a/rounds.html
+++ b/rounds.html
@@ -1,6 +1,5 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="//api3.libcal.com/js/myscheduler.js?002"></script>
     <link rel="stylesheet" href="style.css">
     <script src="code.js"></script>
 </head>
@@ -14,7 +13,7 @@
                     </span> <span class="icon-bar">
                     </span> 
                 </button>
-                <a class="navbar-brand" href="index.html">Visualizations</a>
+                <a class="navbar-brand" href="visualizations.html">Visualizations</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
