--- a/visualizations.html
+++ b/visualizations.html
@@ -35,16 +35,16 @@
     <div class="container" id="content">
         <div class="row">
             <div class="col-md-6">
-                <h2>Virtual Reality</h2>
-                <a href="images/vr.png" data-lightbox="vr" data-title="Interacting with Molecules in VR"><img class="img-thumbnail" src="images/vr.png"></a>
+                <h2>Tracking Usage</h2>
+                <a href="images/occupancy.png" data-lightbox="vr" data-title="Making sure we know how people use our space"><img class="img-thumbnail" src="images/occupancy.png"></a>
                 <p>Here at OU, we're exploring new methods of research and instruction through the use of Virtual Reality. Here's some of the work we've been doing using VR across multiple disciplines.</p>
-                <p><a class="btn btn-default" href="vr.html" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="HCLCStats.html" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-6" id="webdev">
-                <h2>Digital Scholarship</h2>
-                <a href="images/cytoscape.png" data-lightbox="cytoscape" data-title="Visualizing a blog using Cytoscape.js"><img class="img-thumbnail" src="images/cytoscape.png"></a>
-                <p>Hey, kid! I'm a computer!</p>
-                <p><a class="btn btn-default" href="scholarship.html" role="button">View details &raquo;</a></p>
+                <h2>Tracking Rounds</h2>
+                <a href="images/rounds.png" data-lightbox="cytoscape" data-title="Keeping track of ourselves every day"><img class="img-thumbnail" src="images/rounds.png"></a>
+                <p>How good are we about tracking stats in the HCLC? These visualizations help us keep track of ourselves.</p>
+                <p><a class="btn btn-default" href="rounds.html" role="button">View details &raquo;</a></p>
             </div>
         </div>
     </div>
