--- a/visualizations.html
+++ b/visualizations.html
@@ -37,7 +37,7 @@
             <div class="col-md-6">
                 <h2>Tracking Usage</h2>
                 <a href="images/occupancy.png" data-lightbox="vr" data-title="Making sure we know how people use our space"><img class="img-thumbnail" src="images/occupancy.png"></a>
-                <p>Here at OU, we're exploring new methods of research and instruction through the use of Virtual Reality. Here's some of the work we've been doing using VR across multiple disciplines.</p>
+                <p>How are people using our space? These visualizations help us understand when and how we need to focus our efforts.</p>
                 <p><a class="btn btn-default" href="HCLCStats.html" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-6" id="webdev">
