--- a/visualizations.html
+++ b/visualizations.html
@@ -26,8 +26,9 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="HCLCStats.html">HCLC Stats</a></li>
-                    <li><a href="rounds.html">Round Stats</a></li>
+                    <li><a href="visualizations/HCLCStats.html">HCLC Stats</a></li>
+                    <li><a href="visualizations/rounds.html">Round Stats</a></li>
+                    <li><a href="EIC.html">EIC Stats</a></li>
                 </ul>
             </div>
         </div>
@@ -37,14 +38,22 @@
             <div class="col-md-6">
                 <h2>Tracking Usage</h2>
                 <a href="images/occupancy.png" data-lightbox="vr" data-title="Making sure we know how people use our space"><img class="img-thumbnail" src="images/occupancy.png"></a>
-                <p>How are people using our space? These visualizations help us understand when and how we need to focus our efforts.</p>
-                <p><a class="btn btn-default" href="HCLCStats.html" role="button">View details &raquo;</a></p>
+                <p>How are people using the HCLC? These visualizations help us understand when and how we need to focus our efforts.</p>
+                <p><a class="btn btn-default" href="visualizations/HCLCStats.html" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-6" id="webdev">
                 <h2>Tracking Rounds</h2>
                 <a href="images/rounds.png" data-lightbox="cytoscape" data-title="Keeping track of ourselves every day"><img class="img-thumbnail" src="images/rounds.png"></a>
                 <p>How good are we about tracking stats in the HCLC? These visualizations help us keep track of ourselves.</p>
-                <p><a class="btn btn-default" href="rounds.html" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="visualizations/rounds.html" role="button">View details &raquo;</a></p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <h2>EIC Statistics</h2>
+                <a href="./images/occupancy.png" data-lightbox="vr" data-title="Making sure we know how people use our space"><img class="img-thumbnail" src="images/occupancy.png"></a>
+                <p>How are people using the EIC?</p>
+                <p><a class="btn btn-default" href="visualizations/EIC.html" role="button">View details &raquo;</a></p>
             </div>
         </div>
     </div>
