--- a/visualizations/HCLCStats.html
+++ b/visualizations/HCLCStats.html
@@ -1,13 +1,15 @@
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>James L. Adams</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/party.png" />
-  	<link rel="stylesheet" href="lightbox2-master/dist/css/lightbox.css">
-    <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/party.png" />
+  	<link rel="stylesheet" href="../lightbox2-master/dist/css/lightbox.css">
+    <link rel="stylesheet" href="../bootstrap-3.3.5-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap-3.3.5-dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 <body>
@@ -20,17 +22,19 @@
                     </span> <span class="icon-bar">
                     </span> 
                 </button>
-                <a class="navbar-brand" href="visualizations.html">Visualizations</a>
+                <a class="navbar-brand" href="../visualizations.html">Visualizations</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="HCLCStats.html">HCLC Stats</a></li>
                     <li><a href="rounds.html">Round Stats</a></li>
+                    <li><a href="EIC.html">EIC Stats</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 100%; height: 100%;'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;On&#47;OngoingHCLCStats&#47;OccupancyDataCont_&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='100%' height='100%' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='OngoingHCLCStats&#47;OccupancyDataCont_' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;On&#47;OngoingHCLCStats&#47;OccupancyDataCont_&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
-    <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-  	<script src="lightbox2-master/dist/js/lightbox.min.js"></script>
+    <script src="../bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+  	<script src="../lightbox2-master/dist/js/lightbox.min.js"></script>
 </body>
+</html>
