arranging grid and adding images

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                 <p><a class="btn btn-default" href="vr.html" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-4" id="webdev">
-                <h2>Digital Scholarship</h2>
+                <h2>Data Visualizations</h2>
                 <a href="images/cytoscape.png" data-lightbox="cytoscape" data-title="Visualizing a blog using Cytoscape.js"><img class="img-thumbnail" src="images/cytoscape.png"></a>
-                <p>Hey, kid! I'm a computer!</p>
-                <p><a class="btn btn-default" href="scholarship.html" role="button">View details &raquo;</a></p>
+                <p>We use data for everything, and visualizations help us understand it. Here's some visualizations I've worked on.</p>
+                <p><a class="btn btn-default" href="visualizations.html" role="button">View details &raquo;</a></p>
             </div>
             <div class="col-md-4">
                 <h2>Other Projects</h2>
