--- a/visualizations.html
+++ b/visualizations.html
@@ -33,28 +33,37 @@
             </div>
         </div>
     </nav>
+    <a href="index.html">
+    <div class="jumbotron">
+        <div class="container">
+            <h1 align="center">James L. Adams</h1>
+            <p align="center">Emerging Technologies Librarian at the University of Oklahoma Libraries. Here's some stuff I do.</p>
+        </div>
+    </div>
+    </a>
     <div class="container" id="content">
         <div class="row">
-            <div class="col-md-6">
-                <h2>Tracking Usage</h2>
-                <a href="images/occupancy.png" data-lightbox="vr" data-title="Making sure we know how people use our space"><img class="img-thumbnail" src="images/occupancy.png"></a>
-                <p>How are people using the HCLC? These visualizations help us understand when and how we need to focus our efforts.</p>
-                <p><a class="btn btn-default" href="visualizations/HCLCStats.html" role="button">View details &raquo;</a></p>
-            </div>
-            <div class="col-md-6" id="webdev">
-                <h2>Tracking Rounds</h2>
-                <a href="images/rounds.png" data-lightbox="cytoscape" data-title="Keeping track of ourselves every day"><img class="img-thumbnail" src="images/rounds.png"></a>
-                <p>How good are we about tracking stats in the HCLC? These visualizations help us keep track of ourselves.</p>
-                <p><a class="btn btn-default" href="visualizations/rounds.html" role="button">View details &raquo;</a></p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <h2>EIC Statistics</h2>
-                <a href="./images/occupancy.png" data-lightbox="vr" data-title="Making sure we know how people use our space"><img class="img-thumbnail" src="images/occupancy.png"></a>
-                <p>How are people using the EIC?</p>
-                <p><a class="btn btn-default" href="visualizations/EIC.html" role="button">View details &raquo;</a></p>
-            </div>
+            <div class="col-md-11 col-centered">
+                <h1 align="center">Bizzell Library Stats</h2>
+            	<div class="col-md-4 col-sm-6" id="webdev">
+                	<h2>Tracking Rounds</h2>
+                	<a href="images/rounds.png" data-lightbox="cytoscape" data-title="Keeping track of ourselves every day"><img class="img-thumbnail" src="images/rounds.png"></a>
+                	<p>How good are we about tracking stats in the HCLC? These visualizations help us keep track of ourselves.</p>
+                	<p><a class="btn btn-default" href="visualizations/rounds.html" role="button">View details &raquo;</a></p>
+            	</div>
+            	<div class="col-md-4 col-sm-6">
+                	<h2>Tracking Usage</h2>
+                	<a href="images/occupancy.png" data-lightbox="vr" data-title="Making sure we know how people use our space"><img class="img-thumbnail" src="images/occupancy.png"></a>
+                	<p>How are people using the HCLC? These visualizations help us understand when and how we need to focus our efforts.</p>
+                	<p><a class="btn btn-default" href="visualizations/HCLCStats.html" role="button">View details &raquo;</a></p>
+            	</div>
+            	<div class="col-md-4 col-sm-6">
+                	<h2>EIC Statistics</h2>
+                	<a href="images/eic.png" data-lightbox="vr" data-title="Providing service in the EIC"><img class="img-thumbnail" src="images/eic.png"></a>
+                	<p>How are people using the EIC?</p>
+                	<p><a class="btn btn-default" href="visualizations/EIC.html" role="button">View details &raquo;</a></p>
+            	</div>
+        	</div>
         </div>
     </div>
     <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
