--- a/visualizations/rounds.html
+++ b/visualizations/rounds.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>James L. Adams</title>
     <link rel="shortcut icon" type="image/x-icon" href="../images/party.png" />
-  	<link rel="stylesheet" href="../lightbox2-master/dist/css/lightbox.css">
     <link rel="stylesheet" href="../bootstrap-3.3.5-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../bootstrap-3.3.5-dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../style.css">
@@ -33,8 +32,7 @@
             </div>
         </div>
     </nav>
-	<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 100%; height: 100%;'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ro&#47;Rounds_0&#47;AverageNumberofRoundsperWeekday&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='100%' height='100%' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='Rounds_0&#47;AverageNumberofRoundsperWeekday' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ro&#47;Rounds_0&#47;AverageNumberofRoundsperWeekday&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='%3Aembed=y' /><param name='filter' value='%3AshowVizHome=no' /><param name='filter' value='%3AshowTabs=y' /><param name='filter' value='%3Adisplay_count=y' /><param name='filter' value='%3Adisplay_static_image=y' /></object></div>
+	<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 100%; height: 90vh;'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ro&#47;Rounds_0&#47;AverageNumberofRoundsperWeekday&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='100%' height='90vh' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='Rounds_0&#47;AverageNumberofRoundsperWeekday' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ro&#47;Rounds_0&#47;AverageNumberofRoundsperWeekday&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='%3Aembed=y' /><param name='filter' value='%3AshowVizHome=no' /><param name='filter' value='%3AshowTabs=y' /><param name='filter' value='%3Adisplay_count=y' /><param name='filter' value='%3Adisplay_static_image=y' /></object></div>
     <script src="../bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-  	<script src="../lightbox2-master/dist/js/lightbox.min.js"></script>
 </body>
 </html>
