--- a/visualizations.html
+++ b/visualizations.html
@@ -46,13 +46,13 @@
             <div class="col-md-11 col-centered">
                 <h1 align="center">Bizzell Library Stats</h2>
             	<div class="col-md-4 col-sm-6" id="webdev">
-                	<h2>Tracking Rounds</h2>
+                	<h2>Tracking HCLC Rounds</h2>
                 	<a href="images/rounds.png" data-lightbox="cytoscape" data-title="Keeping track of ourselves every day"><img class="img-thumbnail" src="images/rounds.png"></a>
                 	<p>How good are we about tracking stats in the HCLC? These visualizations help us keep track of ourselves.</p>
                 	<p><a class="btn btn-default" href="visualizations/rounds.html" role="button">View details &raquo;</a></p>
             	</div>
             	<div class="col-md-4 col-sm-6">
-                	<h2>Tracking Usage</h2>
+                	<h2>Tracking HCLC Usage</h2>
                 	<a href="images/occupancy.png" data-lightbox="vr" data-title="Making sure we know how people use our space"><img class="img-thumbnail" src="images/occupancy.png"></a>
                 	<p>How are people using the HCLC? These visualizations help us understand when and how we need to focus our efforts.</p>
                 	<p><a class="btn btn-default" href="visualizations/HCLCStats.html" role="button">View details &raquo;</a></p>
@@ -60,7 +60,7 @@
             	<div class="col-md-4 col-sm-6">
                 	<h2>EIC Statistics</h2>
                 	<a href="images/eic.png" data-lightbox="vr" data-title="Providing service in the EIC"><img class="img-thumbnail" src="images/eic.png"></a>
-                	<p>How are people using the EIC?</p>
+                	<p>How are people using the Electronic Information Center on the main floor?</p>
                 	<p><a class="btn btn-default" href="visualizations/EIC.html" role="button">View details &raquo;</a></p>
             	</div>
         	</div>
