messing with image formatting

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                     <a href="mailto:jladams@ou.edu">jladams@ou.edu</a>
                 </div>
                 <div class="col-md-4 col-sm-12">
-                    <a href="images/house.png" data-lightbox="house" data-title="House"><img class="img-thumbnail" src="images/house.png"></a>
+                    <a href="images/house.png" data-lightbox="house" data-title="House"><img id="house" class="img-thumbnail" src="images/house.png"></a>
                 </div>
             </div>
         </div>
