--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         </div>
     </div>
     </a>
-    <div class="container" id="content">
+    <div class="container content" id="content">
         <div class="row">
             <div class="col-md-10 col-centered">
                 <h2 align="center">About</h2>
