--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         </div>
     </div>
     </a>
-    <div class="container" id="content">
+    <div class="container content" id="content">
         <div class="row">
             <div class="col-md-11 col-centered">
                 <h2 align="center">Contact</h2>
