--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>
     </a>
-    <div class="container" id="content">
+    <div class="container content" id="content">
         <div class="row">
             <div class="col-md-4">
                 <h2>Emerging Technologies</h2>
