--- a/visualizations.html
+++ b/visualizations.html
@@ -116,6 +116,30 @@
       </div>
     </div>
   </div>  
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingThree">
+      <h1 class="panel-title">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          Other Visualizations
+        </a>
+      </h1>
+    </div>
+    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+      <div class="panel-body">
+    	<div class="container" id="content">
+        	<div class="row">
+            	<div class="col-md-4 col-sm-4"></div>
+            	<div class="col-md-8 col-sm-12">
+                	<h2>Inhabiting the Anthropocene</h2>
+                	<a href="images/cytoscape.png" data-lightbox="cytoscape" data-title="Visualizing a blog using Cytoscape.js"><img class="img-thumbnail" src="images/cytoscape.png"></a>
+                	<p>This is a visualization of a multidisciplinary blog that I helped create using the Cytoscape.js JavaScript library. This link will take you to an external site.</p>
+                	<p><a class="btn btn-default" href="http://ztclasses.com/HabitationAnthropocene/index.html" target="_blank" role="button">View details &raquo;</a></p>
+            	</div>
+        	</div>
+    	</div>
+      </div>
+    </div>
+  </div>
 </div>   
     <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
   	<script src="lightbox2-master/dist/js/lightbox.min.js"></script>
