--- a/contact.html
+++ b/contact.html
@@ -37,14 +37,13 @@
     <div class="jumbotron">
         <div class="container">
             <h1 align="center">James L. Adams</h1>
-            <p align="center">Emerging Technologies Librarian at the University of Oklahoma Libraries. Here's some stuff I do.</p>
+            <p align="center">Contact</p>
         </div>
     </div>
     </a>
     <div class="container content" id="content">
         <div class="row">
             <div class="col-md-11 col-centered">
-                <h2 align="center">Contact</h2>
                 <div class="col-md-3 col-sm-6" style="margin-bottom:15px">
                     <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></br>
                     <a href="https://goo.gl/maps/yk0FQ" target="_blank">
