--- a/visualizations.html
+++ b/visualizations.html
@@ -47,7 +47,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1 align="center">James L. Adams</h1>
-            <p align="center">Emerging Technologies Librarian at the University of Oklahoma Libraries. Here's some stuff I do.</p>
+            <p align="center">Visualizations</p>
         </div>
     </div>
     </a>
@@ -128,8 +128,7 @@
       <div class="panel-body">
     	<div class="container" id="content">
         	<div class="row">
-            	<div class="col-md-4 col-sm-4"></div>
-            	<div class="col-md-8 col-sm-12">
+            	<div class="col-md-6 col-sm-6 col-centered">
                 	<h2>Inhabiting the Anthropocene</h2>
                 	<a href="images/cytoscape.png" data-lightbox="cytoscape" data-title="Visualizing a blog using Cytoscape.js"><img class="img-thumbnail" src="images/cytoscape.png"></a>
                 	<p>This is a visualization of a multidisciplinary blog that I helped create using the Cytoscape.js JavaScript library. This link will take you to an external site.</p>
